# orchestrator_code

./: .env.example  .gitignore  SETUP.md  cli.py  mcp_server.py  pyproject.toml
orchestrator/: __init__.py  context.py  judge.py  pipeline.py  rag.py  router.py  security.py  specialists.py  workflow.py
tests/: test_context.py  test_judge_configuration.py  test_rag_safety.py  test_workflow.py
