[project]
name = "orchestrator"
version = "0.1.0"
description = "Agentic coding environment: REALMS + local model orchestration"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "fastmcp>=2.0.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
orchestrate = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
